# h2decays

./: .gitignore  README.md  default.nix  h2decays.cabal  package.yaml  release.nix  shell.nix  stack.yaml
lib/HEP/Data/: Kinematics.hs  Util.hs
lib/HEP/Data/THDM/: BranchingRatio.hs  Coupling.hs  DecayWidth.hs  Model.hs  Parser.hs
lib/HEP/Data/THDM/DecayWidth/: H2.hs  Hp.hs
src/: Main.hs  h2decays.hs  hpdecays.hs
src/HEP/Data/: AlphaS.hs  AlphaS.hsc  Constants.hs  Kinematics.hs  Quark.hs  THDM.hs  Util.hs
src/HEP/Data/THDM/: BranchingRatio.hs  Coupling.hs  DecayWidth.hs  Model.hs
src/HEP/Data/THDM/DecayWidth/: H2.hs  Hp.hs
