cabal-version:       2.2
name:                h2decays
version:             0.0.0.0
synopsis:            Calculating decay widths and branching ratios of the heavy Higgs boson in the 2HDM
-- description:
homepage:            https://github.com/cbpark/h2decays
bug-reports:         https://github.com/cbpark/h2decays/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2020 Chan Beom Park
category:            Physics
build-type:          Simple
extra-source-files:  README.md
                     csrc/alphas.cc
                     csrc/alphas.h

executable h2decays
  main-is:             Main.hs
  other-modules:       HEP.Data.AlphaS
                       HEP.Data.Constants
                       HEP.Data.Quark
                       HEP.Data.Util
                       HEP.Data.THDM.Coupling
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -funbox-strict-fields

  cxx-sources:         csrc/alphas.cc
  include-dirs:        csrc
  cxx-options:         -g -O2 -m64 -Wall -Wextra -pedantic -fPIC
  extra-libraries:     LHAPDF, stdc++